styles.css
.container {  display: grid;
    grid-template-columns: 0.4fr 1.6fr;
    grid-template-rows: 0.1fr 1.9fr;
    gap: 0px 20px;
    grid-auto-flow: row;
    grid-template-areas:
      "titleGridArea ."
      "sidebarGridArea mainGridArea";


      border-radius: 10px;
  }
  
  .titleGridArea { 
    
    grid-area: titleGridArea; 

}


.headerDiv {
    display:flex;
    align-items: center;
}

  
  .sidebarGridArea { 
    
    grid-area: sidebarGridArea;     

    /*border:dashed green;*/
}


.createTaskFormDiv {
    display:flex;
    gap:8px;
    align-items: center;
    flex-direction: column;
    border-radius: 5px;
    border:solid #d9d9d9;
}

.createTaskFormDiv input, label, textarea, button, select{
    font-size:medium;

}

.editFormPopup {
    display:none;
    z-index: 9;
    position:fixed;
    margin:auto;
}

.editFormContainer {
    display:flex;
    background-color: #f2f2f2;
    border:solid #d9d9d9;
    gap:8px;
    align-items: center;
    flex-direction: column;
    border-radius: 10px;
    padding:20px;
}

.editButtonDiv{
    display:flex;
    justify-content: space-evenly;
    gap:10px;
}

.editFormContainer input, label, textarea, button, select{
    font-size:medium;
}

#cancelButton {
    color:red;
}
  
  .mainGridArea { 
    
    grid-area: mainGridArea; 
    border:solid #d9d9d9;
    border-radius: 5px;
    }
  
 .projectsContainer {
    display:flex;
    flex-wrap: wrap;
    margin:30px;
 }

 .projectDiv {
    display:flex;
    flex-direction: column;
    border:solid #d9d9d9;
    border-radius: 10px;
    margin:10px;
    min-width: 12vw;
 }

 .projectDiv h2{
    text-align: center;
 }

 .projTitleDiv {
    display:flex;
    align-content: space-between;
    align-items: center;
    justify-content: center;
    gap:3.5px;
 }
 
 .projTitleDiv i{
    font-size: x-large;
 }


 .taskContainer {
    display:flex;
    flex-direction: column;
    margin:10px;
    border-radius: 5px;
    gap:10px;
 }


.taskIconDiv{
    display:flex;
    align-items: center;
    justify-content: center;
    gap:10px;
}

 .taskDiv{
    display: flex;
    flex-direction: column;
 padding: 10px;
 border-radius: 6px;
 background-color: #d9d9d9;
 align-items: center;
 justify-content: center;
}

 

.pri-low {
    color: green
}

.pri-normal {
    color:orange;
}

.pri-high {
    color:red;
}

.completed {
    text-decoration: solid line-through 2px;
}

input, textarea, select {
    border-radius: 5px;
    border:solid #d9d9d9;
}

  html{

    margin-bottom: 10vh;
    margin-left: 10vw;
    margin-right:10vw;
    /*background-color: #f2f2f2;*/
  }

* {
    /* Font-family: Gill Sans, Gill Sans MT, Calibri, sans-serif;*/
    font-family: 'Helvetica', sans-serif;
    color:black;
    box-sizing: border-box;
    letter-spacing: 0em;

  }

